# imgstream

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.cloudrun  Dockerfile.dev  GEMINI.md  LICENSE  Makefile  README.md  SECRETS_CLEANUP_SUMMARY.md  bandit-report.json  cloudbuild.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  deploy.yml  e2e-tests.yml  quality-check.yml  security.yml  terraform.yml  test.yml
.kiro/settings/: mcp.json
.kiro/specs/artifact-registry-common-migration/: design.md  requirements.md  tasks.md
.kiro/specs/filename-collision-avoidance/: design.md  requirements.md  tasks.md
.kiro/specs/gallery-ui-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/heic-web-display/: design.md  requirements.md  tasks.md
.kiro/specs/photo-management-app/: design.md  requirements.md  tasks.md
.kiro/specs/streamlit-state-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/test-quality-improvement/: design.md  requirements.md  tasks.md
.kiro/steering/: tech.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
config/cloudbuild/: production.yaml  staging.yaml
config/monitoring/: alerts.yaml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GITHUB_OIDC_SETUP.md  PRODUCTION_DEPLOYMENT.md  QUALITY_CHECK.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  api_specification.md  collision_handling_user_guide.md  database_reset_guide.md  environment_variables.md  troubleshooting_guide.md
pages/: health.py
performance_test_results/: performance_report.txt
scripts/: README.md  build-image.sh  cloud-run-image-update.sh  deploy-all.sh  deploy-cloud-run.sh  deploy-dev.sh  deploy-production.sh  deployment-monitor.sh  dev-proxy.sh  quality-check.sh  run-e2e-tests.sh  setup-github-oidc.sh  setup-iap.sh  setup-monitoring.sh  setup-production-secrets.sh  terraform-init.sh  test-iap.sh  validate-deployment-config.sh
src/imgstream/: __init__.py  config.py  error_handling.py  health.py  logging_config.py  main.py  monitoring.py
src/imgstream/api/: __init__.py  database_admin.py
src/imgstream/cli/: batch_upload.py
src/imgstream/models/: __init__.py  database.py  photo.py  schema.py
src/imgstream/monitoring/: __init__.py  collision_metrics.py  collision_monitor.py
src/imgstream/services/: __init__.py  auth.py  image_processor.py  metadata.py  storage.py
src/imgstream/ui/: __init__.py  auth_handlers.py  collision_components.py  components.py  dev_auth.py  error_display.py  performance_dashboard.py  upload_handlers.py
src/imgstream/ui/components/: collision_components.py  collision_detection.py  common.py  error.py  error_display.py  gallery.py  upload.py  upload_components.py
src/imgstream/ui/handlers/: __init__.py  (+9 more)
src/imgstream/utils/: __init__.py  collision_detection.py
terraform/: README.md  SENSITIVE_CONFIG.md  artifact_registry.tf  backend-dev.hcl  backend-dev.tf  backend-prod.hcl  backend-prod.tf  cloud_run.tf  github-oidc.tf  iap.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  security.tf  storage.tf  terraform.tfvars.bak  terraform.tfvars.example  terraform.tfvars.example.bak  variables.tf
terraform/common/: artifact_registry.tf  cloud_run.tf  github-oidc.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/dev/: dev.tfvars  main.tf  outputs.tf  secure.tfvars.example  settings.tfvars  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/local/: locals.tf  main.tf  service_account.tf  storage.tf
terraform/modules/imgstream/: artifact_registry.tf  cloud_run.tf  iap.tf  main.tf  monitoring.tf  outputs.tf  security.tf  storage.tf  variables.tf
terraform/prod/: main.tf  outputs.tf  prod.tfvars  settings.tfvars  terraform.tfvars.local.example  variables.tf
terraform/scripts/: deploy.sh  validate.sh
tests/: __init__.py  conftest.py  test_auth_handlers.py  test_basic.py  test_dev_auth.py  test_error_handling.py  test_gallery_page.py  test_main.py  test_ui_components.py  test_upload_validation.py
tests/e2e/: README.md  __init__.py  base.py  conftest.py  test_authentication_flow.py  test_error_scenarios.py  test_simple_auth.py  test_simple_upload.py  test_upload_flow.py
tests/integration/: README.md  __init__.py  test_collision_flow_integration.py  test_complete_system_integration.py  test_error_recovery_integration.py  test_performance_integration.py
tests/models/: __init__.py
tests/performance/: README.md  performance_monitor.py  run_performance_tests.py  test_image_processing_performance.py  test_load_performance.py
tests/security/: README.md  __init__.py  conftest.py  run_security_tests.py  test_auth_service_security.py  test_authentication_security.py  test_data_access_security.py  test_input_validation_security.py  test_signed_url_security.py  test_vulnerability_security.py
tests/unit/: __init__.py  conftest.py  test_development_mode_validation.py  test_test_data_factory.py
tests/unit/api/: test_database_admin.py
tests/unit/models/: test_database.py  test_photo.py  test_schema.py
tests/unit/monitoring/: __init__.py  test_collision_monitor.py
tests/unit/services/: test_auth.py  test_error_handling.py  test_heic_web_display.py  test_image_processor.py  test_metadata.py  test_metadata_collision.py  test_metadata_database_reset.py  test_simple_error.py  test_storage.py
tests/unit/ui/: conftest.py  test_auth_handlers.py  test_collision_components.py  test_collision_detection.py  test_dev_auth.py  test_error_handling.py  test_gallery_datetime.py  test_gallery_heic_display.py  test_gallery_page.py  test_ui_components.py  test_upload_handlers.py  test_upload_handlers_collision.py  test_upload_handlers_monitoring.py  test_upload_results_display.py  test_upload_validation.py
tests/unit/utils/: test_collision_detection.py  test_collision_performance.py
(+5 files in other folders)
